Add named layout guide for the toolbar's bubbles

The bubble tips are presented with an anchor point to know where the
tip of the arrow should be positioned.
A delegate was used to get this point.
This CL changes it to a named layout guide for the clean toolbar.
The named layout guide can't be used with the old toolbar as it is not
positioned with auto-layout internally.

Bug: 788371
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Idbca4372faa2738a65161112d0a4ec59c17e3b36
Reviewed-on: https://chromium-review.googlesource.com/848894
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526701}