ios/chrome/browser/ui/bubble/bubble_view_anchor_point_provider.h
@@ -14,10 +14,13 @@
 @optional
 // Returns either the top-middle or bottom-middle of the tab switcher button
 // based on |direction|. Point is in window-coordinates.
+// TODO(crbug.com/788705): This method can probably becomes required if it is
+// the only one. It would allow to remove the DCHECK.
 - (CGPoint)anchorPointForTabSwitcherButton:(BubbleArrowDirection)direction;
 
 // Returns either the top-middle or bottom-middle of the tools menu button
 // based on |direction|. Point is in window-coordinates.
+// TODO(crbug.com/788705): Remove this methods during old toolbar's cleanup.
 - (CGPoint)anchorPointForToolsMenuButton:(BubbleArrowDirection)direction;
 
 @end
