ios/chrome/browser/ui/toolbar/clean/toolbar_coordinator.h
@@ -15,7 +15,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 @protocol ActivityServicePositioner;
 @protocol ApplicationCommands;
-@protocol BubbleViewAnchorPointProvider;
 @protocol BrowserCommands;
 @class ToolbarButtonUpdater;
 @protocol ToolbarCoordinatorDelegate;
@@ -51,8 +50,6 @@ class WebState;
 
 // Returns the ActivityServicePositioner for this toolbar.
 - (id<ActivityServicePositioner>)activityServicePositioner;
-// Returns the BubbleViewAnchorPointProvider for this toolbar.
-- (id<BubbleViewAnchorPointProvider>)bubbleAnchorPointProvider;
 
 // Start this coordinator.
 - (void)start;
