ios/chrome/browser/ui/toolbar/clean/toolbar_coordinator.mm
@@ -207,10 +207,6 @@
   return self.toolbarViewController;
 }
 
-- (id<BubbleViewAnchorPointProvider>)bubbleAnchorPointProvider {
-  return self.toolbarViewController;
-}
-
 - (void)updateOmniboxState {
   _locationBar->SetShouldShowHintText(
       [self.delegate toolbarModelIOS]->ShouldDisplayHintText());
