ios/chrome/browser/ui/toolbar/clean/toolbar_view_controller.h
@@ -9,7 +9,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <UIKit/UIKit.h>
 
 #import "ios/chrome/browser/ui/activity_services/requirements/activity_service_positioner.h"
-#import "ios/chrome/browser/ui/bubble/bubble_view_anchor_point_provider.h"
 #import "ios/chrome/browser/ui/fullscreen/fullscreen_ui_element.h"
 #import "ios/chrome/browser/ui/toolbar/clean/toolbar_consumer.h"
 
@@ -24,7 +23,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // controls and/or labels.
 @interface ToolbarViewController
     : UIViewController<ActivityServicePositioner,
-                       BubbleViewAnchorPointProvider,
                        FullscreenUIElement,
                        ToolbarConsumer>
 
