ios/chrome/browser/ui/toolbar/toolbar_adapter.mm
@@ -175,13 +175,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #pragma mark - BubbleViewAnchorPointProvider
 
 - (CGPoint)anchorPointForTabSwitcherButton:(BubbleArrowDirection)direction {
-  return [[self.toolbarCoordinator bubbleAnchorPointProvider]
-      anchorPointForTabSwitcherButton:direction];
+  // No-op. The Clean Toolbar uses named layout guides.
+  return CGPointZero;
 }
 
 - (CGPoint)anchorPointForToolsMenuButton:(BubbleArrowDirection)direction {
-  return [[self.toolbarCoordinator bubbleAnchorPointProvider]
-      anchorPointForToolsMenuButton:direction];
+  // No-op. The Clean Toolbar uses named layout guides.
+  return CGPointZero;
 }
 
 #pragma mark - FullscreenUIElement
